--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "woof-ui",
   "version": "0.0.1",
   "private": true,
+  "main": "./lib/index.js",
   "devDependencies": {
     "autoprefixer": "6.3.7",
     "babel-core": "6.11.4",
