--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "woof-ui",
   "version": "0.0.2",
-  "private": true,
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "devDependencies": {
     "autoprefixer": "6.3.7",
     "babel-core": "6.11.4",
