--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "woof-ui",
   "version": "0.0.3",
-  "main": "./src/index.js",
+  "main": "./src/src.js",
   "devDependencies": {
     "autoprefixer": "6.3.7",
     "babel-core": "6.11.4",
