--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "woof-ui",
   "version": "0.0.4",
-  "main": "./src/src.js",
+  "main": "./lib/src.js",
   "devDependencies": {
     "autoprefixer": "6.3.7",
     "babel-core": "6.11.4",
@@ -43,12 +43,14 @@
     "webpack-dev-server": "1.14.1",
     "whatwg-fetch": "1.0.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "woof-dom": "^1.0.15"
+  },
   "scripts": {
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "clean": "rimraf build",
-    "prepublish": "npm run clean"
+    "prepublish": "npm run clean && babel src --out-dir lib && rimraf lib/index.js && cp -R src/css lib"
   },
   "eslintConfig": {
     "extends": "./config/eslint.js"
